[project]
name = "jaxa-earth-qgis-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "ruff>=0.8.2",
]
[tool.ruff.lint]
ignore = ["F401", "E711", "E712", "E713", "E721", "E722", "E741", "F841"]